# smartfarme

./: amir  medomar
Gestion_des_equipements_agricoles/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  gestion_des_equipements_agricoles.glade.bak  gestion_des_equipements_agricoles.gladep.bak
Gestion_des_equipements_agricoles/autom4te.cache/: output.0  requests  traces.0  traces.1
Gestion_des_equipements_agricoles/po/: Makefile  Makefile.in
Gestion_des_equipements_agricoles/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  equipements.c  equipements.h  equipements.txt  gestion_des_equipements_agricoles  interface.c  interface.h.bak  main.c
Gestion_des_equipements_agricoles/src/.deps/: callbacks.Po  equipements.Po
SmartFarme/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.in  gestion-des-clients.gladep.bak  gestion-des-troupeaux.gladep
SmartFarme/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
SmartFarme/po/: Makefile  Makefile.in
SmartFarme/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  client.c  client.txt  interface.c  interface.h  interface.h.bak  main.c
SmartFarme/src/.deps/: callbacks.Po  client.Po
gestion des clients/: Makefile.am  config.h  gestion-des-clients.glade.bak
gestion des clients/po/: Makefile.in
gestion des ouvriers/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  gestion-des-ouvriers.glade.bak  gestion-des-ouvriers.gladep
gestion des ouvriers/src/: Makefile  Makefile.am  Makefile.in  absenteisme.txt  callbacks.c  callbacks.h  gestion-des-ouvriers  interface.c.bak  interface.h.bak  main.c  ouvrier.c  ouvrier.h  ouvriers.txt
gestion des ouvriers/src/.deps/: ouvrier.Po
troupeaux/: Makefile  Makefile.in  config.h  configure.in  gestion-des-troupeaux.glade
troupeaux/src/: Makefile  Makefile.am  callbacks.c  callbacks.h  gestion-des-troupeaux  troupeaux.c  troupeaux.h
troupeaux/src/.deps/: troupeaux.Po
(+17 files in other folders)
